2008-02-01  Joseph Myers  <joseph@codesourcery.com>

	* BASE-VER: Bump.
	* DEV-PHASE: Mark as prerelease.

2008-02-01  Release Manager

	* GCC 4.2.3 released.

2008-02-01  Andrew Pinski  <pinskia@gmail.com>
	    Mark Mitchell  <mark@codesourcery.com>
	    Ben Elliston  <bje@au.ibm.com>

	PR c/29326
	* doc/extend.texi (Other Builtins): Document.

2008-01-31  Manuel Lopez-Ibanez  <manu@gcc.gnu.org>

	* doc/invoke.texi (-ansi): Mention explicitly corresponding -std=
	options. Minor fixes.
	(-std): Move reference to standards closer to where language
	standards are first mentioned.
	
2008-01-27  Manuel Lopez-Ibanez  <manu@gcc.gnu.org>

	PR 32102
	* flags.h (warn_strict_aliasing): Remove.
	(warn_strict_overflow): Remove.
	* opts.c (warn_strict_aliasing): Remove.
	(warn_strict_overflow): Remove.
	* c-opts.c (c_common_handle_option): -Wall only sets
	-Wstrict-aliasing or -Wstrict-overflow if they are uninitialized.
	(c_common_post_options): Give default values to -Wstrict-aliasing
	and -Wstrict-overflow if they are uninitialized.
	* common.opt (Wstrict-aliasing): Specify Var and Init.
	(Wstrict-overflow): Likewise.
	
2008-01-25  Joseph Myers  <joseph@codesourcery.com>

	PR other/31955
	* doc/install.texi2html: Generate gcc-vers.texi.

2008-01-24  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	Backport:
	2007-11-07  Kenneth Zadeck <zadeck@naturalbridge.com>
	
	PR middle-end/33826
	* ipa-pure-const (static_execute): Added code to keep recursive
	functions from being marked as pure or const.
	* ipa-utils (searchc): Fixed comment.
	
2008-01-24  Richard Guenther  <rguenther@suse.de>

	PR middle-end/34953
	* predict.c (apply_return_prediction): Check for empty blocks.
	(tree_estimate_probability): Likewise.

2008-01-23  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2006-10-21  Richard Guenther  <rguenther@suse.de>

	* builtins.c (fold_builtin_classify): Fix typo.

2008-01-22  Eric Botcazou  <ebotcazou@adacore.com>

	PR rtl-optimization/34628