@@ -1,3 +1,12 @@
+2008-02-01  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	Backport:
+	2007-08-02  Nathan Froyd  <froydnj@codesourcery.com>
+
+	PR middle-end/25445
+	* varasm.c (default_binds_local_p_1): Consult flag_whole_program
+	if we are compiling with -fPIC.
+
 2008-02-01  Joseph Myers  <joseph@codesourcery.com>
 
 	* BASE-VER: Bump.
